--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="SpinnerDefaultText1">Выберите группу</string>
     <string name="SpinnerDefaultText2">Выберите тип обучения</string>
     <string name="SpinnerDefaultText3">Выберите факультет</string>
+    <string name="SaveButton">Сохранить данные</string>
+    <string name="Greetings">Информация об обучении</string>
+    <string name="toolTip">Заполни все поля, чтобы получить актуальное расписание</string>
 </resources>
