--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,5 @@
     <string name="selectFaculty">Выберите факультет</string>
     <string name="SaveButton">Сохранить данные</string>
     <string name="Greetings">Информация об обучении</string>
-    <string name="toolTip">Заполни все поля, чтобы получить актуальное расписание</string>
+    <string name="toolTip">Заполни все поля, чтобы получить актуальное расписание!</string>
 </resources>
