--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,6 @@
 <resources>
     <string name="app_name">VyatsuApp</string>
-    <string name="Course">Ваш курс</string>
-    <string name="confirm">Подтвердить</string>
-    <string name="outTimetable">Расписание будет здесь</string>
-    <string name="clear">Очистить</string>
-    <string name="selectGroup">Выберите группу</string>
-    <string name="selectEducationType">Выберите тип обучения</string>
-    <string name="selectFaculty">Выберите факультет</string>
-    <string name="SaveButton">Сохранить данные</string>
-    <string name="Greetings">Информация об обучении</string>
-    <string name="toolTip">Заполни все поля, чтобы получить актуальное расписание!</string>
-    <string name="VyatsuURL"></string>
+    <string name="SaveButton">Войти</string>
+    <string name="Greetings">Авторизация</string>
+    <string name="toolTip">Выполни вход, используя логин и пароль от личного кабинета!</string>
 </resources>
