--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="SaveButton">Войти</string>
     <string name="Greetings">Авторизация</string>
     <string name="toolTip">Выполни вход, используя логин и пароль от личного кабинета!</string>
+    <string name="Login">Логин</string>
+    <string name="Password">Пароль</string>
 </resources>
