--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="Surveys">Опросы</string>
     <string name="Documents">Документы</string>
     <string name="PersonalData">Персональные данные</string>
-    <string name="lastUpdateText">Последнее обновление:</string>
+    <string name="lastUpdateText">Обновлено:</string>
 </resources>
