--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,8 @@
     <string name="toolTip">Выполни вход, используя логин и пароль от личного кабинета!</string>
     <string name="Login">Логин</string>
     <string name="Password">Пароль</string>
-    <string name="Settings">Настройки</string>
+    <string name="Settings">\t\tНастройки</string>
     <string name="Timetable">Расписание</string>
-    <string name="Surveys">Опросы</string>
-    <string name="Documents">Документы</string>
-    <string name="PersonalData">Персональные данные</string>
     <string name="lastUpdateText">Обновлено:</string>
     <string name="dateTextView">День недели XX.XX.XXXX</string>
     <string name="classNumberTextView">Пара X: XX:XX-XX:XX</string>
@@ -22,4 +19,8 @@
     <string name="group_nospacing">Учебная группа</string>
     <string name="close">Закрыть</string>
     <string name="save_group">Сохранить</string>
+    <string name="changeTheme">Сменить тему</string>
+    <string name="hideClassAfterItEnds">Убирать пары сразу после их окончания</string>
+    <string name="settings">Настройки</string>
+    <string name="socials">Контакты</string>
 </resources>
