--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="hideClassAfterItEnds">Убирать пары сразу после их окончания</string>
     <string name="settings">Настройки</string>
     <string name="socials">Контакты</string>
+    <string name="noDataText">Информации о расписании нет</string>
 </resources>
